fix: improve scrollbar location

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -13,4 +13,5 @@ body {
   padding: 0;
   margin: 0;
   font-size: 14px;
+  overflow: hidden;
 }
